--- a/visualiser/views/index.haml
+++ b/visualiser/views/index.haml
@@ -2,6 +2,9 @@
 %html
   %head
     %title Curriculum Visualiser
+    %script{:type => "text/javascript", src:"/js/jquery-1.10.2.js"}
+    %script{:type => "text/javascript", src:"/js/handlebars.runtime-v1.3.0.js"}
+    %script{:type => "text/javascript", src:"/js/app.js"}
 
   %body
     %div#content
