included css files

--- a/visualiser/views/index.haml
+++ b/visualiser/views/index.haml
@@ -1,10 +1,12 @@
-!!! 5
+!!!5
 %html
   %head
     %title Curriculum Visualiser
     %script{:type => "text/javascript", src:"/js/jquery-1.10.2.js"}
     %script{:type => "text/javascript", src:"/js/handlebars.runtime-v1.3.0.js"}
     %script{:type => "text/javascript", src:"/js/app.js"}
+
+    %link{:type => "text/css", :rel => "stylesheet", :href => "/css/visualiser.css"}
 
   %body
     %div#content
@@ -13,3 +15,5 @@
       %p
         A tool to visualise the Curriculum ontology used by the
         %a{ :href => 'http://www.bbc.co.uk/education', :title => 'Knowledge and Learning Beta site' } Knowledge and Learning Beta site
+
+        #canvas &nbsp;
