--- a/visualiser/public/css/visualiser.css
+++ b/visualiser/public/css/visualiser.css
@@ -1,4 +1,7 @@
 body{
+    font-size:2em;
+    background-color:#bbb;
+    color:#FFF;
   margin:0px;
   padding:0px;
   font-family:Arial;
@@ -11,4 +14,11 @@ body{
 
 #canvas{
 	border:1px solid #ccc;
+}
+.phases { display:block;border:1px solid #ddd;clear:both;  }
+.phases li { float:left;list-style:none;margin:0 20px 0 0; }
+.levels li { clear:both;list-style:none;margin:0 20px 0 0; }
+
+.expandableLevelData{  
+	display:none;	
 }
