--- a/visualiser/public/css/visualiser.css
+++ b/visualiser/public/css/visualiser.css
@@ -12,14 +12,16 @@ body{
 	width:1004px;
 }
 
-#canvas{
+#canvas, #messages{
 	border:1px solid #ccc;
 }
-h1, h2{ margin:0 0 10px 0  }
+h1, h2, h3{ margin:0 0 10px 0  }
 .phases { display:block;border:1px solid #ddd;clear:both;  }
 .phases li { float:left;list-style:none;margin:0 20px 0 0; }
 .levels li { clear:both;list-style:none;margin:0 20px 0 0; }
 
 .expandableLevelData{  
+	padding:0 0 0 20px;
 	display:none;	
+	color:#333;
 }
