updated css and title tag

--- a/visualiser/views/index.haml
+++ b/visualiser/views/index.haml
@@ -14,7 +14,7 @@
 
       %p
         A tool to visualise the 
-        %a{ :href => 'http://www.bbc.co.uk/ontologies/curriculum/2013-04-03.shtml', :title => 'Knowledge and Learning Beta site' } Curriculum ontology 
+        %a{ :href => 'http://www.bbc.co.uk/ontologies/curriculum/2013-04-03.shtml', :title => 'Curriculum ontology' } Curriculum ontology.
         used by the
         %a{ :href => 'http://www.bbc.co.uk/education', :title => 'Knowledge and Learning Beta site' } Knowledge and Learning 
         Beta site
