--- a/visualiser/public/css/visualiser.css
+++ b/visualiser/public/css/visualiser.css
@@ -19,7 +19,11 @@ h1, h2, h3{ margin:0 0 10px 0  }
 .phases { display:block;border:1px solid #ddd;clear:both;  }
 .phases li { float:left;list-style:none;margin:0 20px 0 0; }
 .levels li { clear:both;list-style:none;margin:0 20px 0 0; }
-
+.guides{
+   padding:0 0 0 20px;
+   display:none;	
+   color:#333;
+}
 .expandableLevelData{  
 	padding:0 0 0 20px;
 	display:none;	
