--- a/visualiser/views/index.erb
+++ b/visualiser/views/index.erb
@@ -58,6 +58,7 @@
 
     <script src="/js/jquery-1.10.2.js"></script>
     <script src="/js/handlebars.js"></script>
+    <script src="/js/d3.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
