--- a/visualiser/public/css/visualiser.css
+++ b/visualiser/public/css/visualiser.css
@@ -30,3 +30,33 @@ h1, h2, h3{ margin:0 0 10px 0  }
 	color:#333;
 }
 a { color:#ddd; }
+
+text {
+    font-size: 11px;
+    pointer-events: none;
+}
+
+text.parent {
+    fill: #1f77b4;
+}
+
+circle {
+    fill: #ccc;
+    stroke: #999;
+    pointer-events: all;
+}
+
+circle.parent {
+    fill: #1f77b4;
+    fill-opacity: .1;
+    stroke: steelblue;
+}
+
+circle.parent:hover {
+    stroke: #ff7f0e;
+    stroke-width: .5px;
+}
+
+circle.child {
+    pointer-events: none;
+}
