--- a/visualiser/views/index.erb
+++ b/visualiser/views/index.erb
@@ -4,6 +4,8 @@
     <title>Curriculum Visualiser</title>
 
     <link type="text/css" rel="stylesheet" href="/css/visualiser.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap-theme.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.css"/>
 </head>
 
 <body>
@@ -25,7 +27,7 @@
 </div>
 
 <script src="/js/jquery-1.10.2.js"></script>
-<script src="/js/handlebars.js"></script>
+<script src="/js/bootstrap.js"></script>
 <script src="/js/d3.js"></script>
 <script src="/js/app.js"></script>
 </body>
