added block visuals

--- a/visualiser/views/index.erb
+++ b/visualiser/views/index.erb
@@ -19,11 +19,11 @@
             <ul class="nav navbar-nav">
                 <li><a href="#" id="pack_nav">Pack Layout</a></li>
                 <li><a href="#" id="sunburst_nav">Sunburst</a></li>
+                <li><a name="#" id="blocks_name">Blocks</a></li>
             </ul>
         </nav>
 
         <h1>Curriculum Visualiser</h1>
-
         <p>A tool to visualise the
             <a href="http://www.bbc.co.uk/ontologies/curriculum/2013-04-03.shtml" title="Curriculum ontology">Curriculum
                 ontology</a> used by the
