--- a/visualiser/views/index.erb
+++ b/visualiser/views/index.erb
@@ -10,7 +10,7 @@
 
 <body>
 <div id="content">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <a href="http://www.bbc.co.uk/education" class="navbar-brand">bbc.co.uk/education</a>
         </div>
